2003-07-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	Move welcome from rosapps to here and beautify it a bit.

	* Makefile: Copy bootdata/autorun.inf, and bootdata/icon.ico to CD.
	(SYS_APPS) Add welcome.
	* include/defines.h (BS_FLAT): Define.
	* bootdata/autorun.inf: New file.
	* bootdata/icon.ico: Ditto.
	* subsys/system/welcome: New directory.
	* subsys/system/welcome/.cvsignore: New file.
	* subsys/system/welcome/Makefile: Ditto.
	* subsys/system/welcome/resource.h: Ditto.
	* subsys/system/welcome/welcome.c: Ditto.
	* subsys/system/welcome/welcome.rc: Ditto.
	* subsys/system/welcome/res/: New directory.
	* subsys/system/welcome/res/background-right.bmp: New file.
	* subsys/system/welcome/res/background-top.bmp: Ditto.
	* subsys/system/welcome/res/default.bmp: Ditto.
	* subsys/system/welcome/res/icon.ico: Ditto.
	* subsys/system/welcome/res/topic0.bmp: Ditto.
	* subsys/system/welcome/res/topic1.bmp: Ditto.
	* subsys/system/welcome/res/topic2.bmp: Ditto.

2003-07-23  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	lib/user32/misc/: stubs.c Removed stub for ClientToScreen.
	lib/user32/windows/: window.c Implemented ClientToScreen &
	IsIconic.

2003-07-20  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* include/win32k/ntuser.h Implemented GetKeyState, GetKeyboardState &
	SetKeyboardState.
	* subsys/win32k/ntuser/stubs.c
	* subsys/win32k/ntuser/keyboard.c
	* lib/user32/windows/input.c

2003-07-20  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* lib/gdi32/misc/stubs.c Implemented Unpluged DC code.
	* lib/gdi32/objects/dc.c ditto
	* lib/gdi32/objects/line.c ditto
	* lib/gdi32/objects/text.c ditto
	* lib/gdi32/objects/region.c ditto
	* lib/user32/windows/draw.c Implemented FrameRect, InvertRect and
	DrawFocusRect.

2003-07-18  Royce Mitchell III  <royce3@ev1.net>

	* drivers/fs/vfat/volume.c: fixed bug lines 88, 92 - wasn't copying
	null-terminator.

2003-07-18  Royce Mitchell III  <royce3@ev1.net>