@@ -1,5 +1,9 @@
 2003-07-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* drivers/fs/vfat/*.c: Remove protection of NDEBUG.
+
+2003-07-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	Move welcome from rosapps to here and beautify it a bit.
 
 	* Makefile: Copy bootdata/autorun.inf, and bootdata/icon.ico to CD.
